# data-reliability-engineering-demo

./: README.md
dbt-example/: pyproject.toml
dbt-example/dbt_example/: .gitignore  README.md  profiles.yml
dbt-example/dbt_example/init/: load.sql
dbt-example/dbt_example/init/data/: books.csv
dbt-example/dbt_example/models/example/: _schema.yml  book_count_by_owner_prefecture.sql  books_with_owner.sql
dbt-example/dbt_example/seeds/: _schema.yml  books.csv  users.csv
dbt-example/dbt_example/tests/: _schema.yml  assert_book_published_date_is_past.sql
